tests/models/enum/unnamed/u32/fail/alias.stderr
error: No support alias term on the unnamed field.
 --> tests/models/enum/unnamed/u32/fail/alias.rs:4:10
  |
4 |       Value(
  |  __________^
5 | |        #[field(alias = "val")]
6 | |         u32
7 | |     ),
  | |_____^
